--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,26 @@
-# CocoaPods
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control?
-#
-# Pods/
+# Xcode
+.DS_Store
+.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspective
+*.perspectivev3
+!default.perspectivev3
+*.xcodeproj/xcuserdata/*.xcuserdatad
+*.xcuserdatad
+*.swp
+*.xccheckout
+*.moved-aside
+*.hmap
+*.ipa
+*.xcuserstate
+xcuserdata
+profile
+DerivedData
+build/
 
+# CocoaPods
+Pods
